# intellect-mindscape

./: .example-env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  tech-presentation.md
admin/: .gitignore  package.json
admin/public/: bootstrap.css  index.html  manifest.json
admin/src/: App.tsx  serviceWorker.ts
admin/src/components/: AdminPanel.tsx  GameSessionList.tsx  NavBar.tsx  Spinner.tsx  UserForm.tsx  UserList.tsx
admin/src/components/common/: ModalWindow.tsx  ModalWindowConfirm.tsx
admin/src/services/: AxiosRequest.ts  Tokens.ts  gameService.ts  userService.ts
admin/src/styles/: AdminPanel.scss  GameSessionList.scss  UserForm.scss  UserList.scss  main.scss
admin/src/utils/: commonUtils.ts
auth/: package.json
auth-backend/: .gitignore  Dockerfile  hello.py  pyproject.toml  requirements.txt  run-pytest.sh
auth-backend/app/: main.py
auth-backend/app/brokers/: kafka.py
auth-backend/app/caches/: keydb.py
auth-backend/app/configs/: logging_handler.py
auth-backend/app/exceptions/: custom_exceptions.py
auth-backend/app/middlewares/: logging_middleware.py  middleware.py
auth-backend/app/routers/: auth.py
auth-backend/app/schemas/: auth.py
auth-backend/app/services/: keycloak.py
auth-backend/app/utils/: handlers.py  keydb.py
auth-backend/tests/: conftest.py  data_generating_testing.py  test_main.py  test_run_in_containers.py
auth/public/: manifest.json
auth/src/: App.tsx  index.tsx  serviceWorker.ts  styles.scss
auth/src/components/: HomePage.tsx  Login.tsx  NavBar.tsx  Register.tsx  Snowflakes.tsx
auth/src/styles/: HomePage.scss  Login.scss  Spinner.scss
auth/src/utils/: Auth.ts  AxiosRequest.ts  Tokens.ts
game/: Dockerfile  package.json  tsconfig.json
game-backend-ai/: Dockerfile  hello.py  pyproject.toml
game-backend-ai/app/: main.py
game-backend-ai/app/database/: schemas.py
game-backend-ai/app/database/repository/: game.py  model_repository.py
game-backend-ai/app/kafka/: kafka_consumer.py
game-backend-ai/app/services/: create_recommendations.py
game-backend-ai/app/utils/: process_results.py
game-backend-api/: alembic.ini  hello.py  pyproject.toml
game-backend-api/app/: main.py
game-backend-api/app/brokers/: kafka.py  kafka_producer.py
game-backend-api/app/database/: models.py  schemas.py
game-backend-api/app/database/repository/: crud_base.py  game.py  model_repository.py  stats.py
game-backend-api/app/kafka/: kafka_consumer.py  kafka_producer.py
game-backend-api/app/routers/: game.py  remarks.py  stats.py  translations.py
game-backend-api/app/services/: counter_answers_validating.py  game.py  game_status_service.py  translation_service.py
game-backend-api/app/utils/: translations.json
game-backend-chat/: go.mod  handlers.go  kafka.go  main.go  models.go
game/src/: App.tsx
game/src/components/: Navbar.tsx  Question.tsx  Spinner.tsx
game/src/components/arithmetic/: MathCaptcha.tsx  MathQuestion.tsx
game/src/components/reactions/: PositiveSmile.tsx
game/src/components/remarks/: Remarks.tsx
game/src/hooks/: useWebSocket.ts
game/src/services/: remarksService.ts  statsService.ts
game/src/styles/: Game.scss  MathCaptcha.scss  Navbar.scss  main.scss
game/src/styles/music/: InteractiveBassNotesSheet.scss  InteractiveTrebleNotesSheet.scss
keycloak/: Dockerfile  import-realm-old.sh  import-realm.sh  new-client-initial.json  realm.py  start.sh
monitoring/: Dockerfile  loki-config.yml
monitoring/grafana/dashboards/: dashboard.json
nginx/: Dockerfile  nginx.conf  site.conf
ollama/: Dockerfile
quiz/: .gitignore  package.json  tsconfig.json
quiz-backend-ai/: .gitignore  hello.py  pyproject.toml  requirements.txt
quiz-backend-ai/app/: main.py
quiz-backend-ai/app/configs/: logging_handler.py
quiz-backend-ai/app/database/: db.py
quiz-backend-ai/app/exceptions/: custom_exceptions.py
quiz-backend-ai/app/kafka/: kafka_consumer.py  kafka_producer.py
quiz-backend-ai/app/routers/: study_recommendations.py
quiz-backend-ai/app/services/: create_recommendations.py
quiz-backend-ai/app/utils/: process_results.py  rate_limiter.py
quiz-backend-ai/utils/: keydb.py  logging_handler.py
quiz-backend-api/: .gitignore  Dockerfile  hello.py  pyproject.toml  requirements.txt  run-pytest.sh
quiz-backend-api/app/: main.py
quiz-backend-api/app/brokers/: kafka.py  kafka_admin.py  kafka_producer.py
quiz-backend-api/app/configs/: logging_handler.py
quiz-backend-api/app/database/: db.py
quiz-backend-api/app/database/migrations/: env.py
quiz-backend-api/app/database/migrations/versions/: cd9549457171_initial_migration.py
quiz-backend-api/app/database/repository/: game.py  model_repository.py  stats.py  user.py
quiz-backend-api/app/kafka/: kafka_consumer.py  kafka_producer.py
quiz-backend-api/app/routers/: game.py  remarks.py  stats.py  translations.py
quiz-backend-api/app/services/: counter_answers_validating.py  game.py  game_status_service.py
quiz-backend-api/app/utils/: translations.json
quiz-backend-api/tests/: conftest.py  data_generating_testing.py  test_run_in_containers.py
quiz-backend-chat/: Dockerfile  go.mod  go.sum  kafka.go  main.go
quiz/public/: index.html  manifest.json
quiz/src/: App.tsx  index.tsx  serviceWorker.ts
quiz/src/components/: Avatar.tsx  Chat.tsx  Game.tsx  Navbar.tsx  Timer.tsx
quiz/src/components/music/: BassSheet.tsx  InteractiveBassNotesSheet.tsx  InteractiveTrebleNotesSheet.tsx  TrebleSheet.tsx
quiz/src/components/reactions/: NegativeSmile.tsx  NeutralSmile.tsx
quiz/src/components/statistics/: Statistics.tsx
quiz/src/components/trigonometry/: TrigonometryQuestion.tsx
quiz/src/services/: AxiosRequest.ts  Tokens.ts  gameService.ts
quiz/src/styles/: App.scss  Avatar.scss  Spinner.scss  Statistics.scss
quiz/src/styles/arithmetic/: MathQuestion.scss
quiz/src/utils/: commonUtils.ts
redis/: Dockerfile
